 [metadata]
name = tasksource
description = Preprocessings to prepare datasets for a task
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sileod/tasksource/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dotwiz
    funcy
    datasets
    exrex
    magicattr
    pandas
    numpy
    scipy
    sorcery

[options.packages.find]
where = src
